data/derived/fa15/progs/unify/prog0405.ml.out
Characters 208-234:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type 'a * 'b
